# cherry

./: .gitignore  README.md
cherry/: .datacherry_data  Cargo.toml
cherry/src/: main.rs  routes.rs  server_utils.rs
cherry/src/db/: mod.rs
cherry/src/model/: cherry_data.rs  coffee_data.rs  experiments_data.rs  mod.rs
cherry/src/schema/: mod.rs  mutation_root.rs  query_root.rs
frontend/: karma.conf.js  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  graphql.module.ts
frontend/src/app/containers/default-layout/: _nav.ts  default-layout.component.html
frontend/src/app/views/add-new-coffee/: add-new-coffee-routing.module.ts  add-new-coffee.component.html  add-new-coffee.component.ts  add-new-coffee.module.ts
frontend/src/app/views/add-new-experiment/: add-new-experiment-routing.module.ts  add-new-experiment.component.html  add-new-experiment.component.ts  add-new-experiment.module.ts
frontend/src/app/views/all-coffees/: all-coffees-routing.module.ts  all-coffees.component.html  all-coffees.component.ts  all-coffees.module.ts
frontend/src/app/views/current-rotation/: current-rotation-routing.module.ts  current-rotation.component.html  current-rotation.component.ts  current-rotation.module.ts
frontend/src/app/views/experiments/: experiments-routing.module.ts  experiments.component.html  experiments.component.ts  (+1 more)
frontend/src/components/docs-link/: docs-link.component.html
frontend/src/scss/: _charts.scss  _examples.scss  _fixes.scss  styles.scss
(+3 files in other folders)
