[package]
name = "cherry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
async-graphql = { version = "6.0.1", features = ["uuid", "chrono"] }
async-graphql-axum = "6.0.1"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
slab = "0.4.8"
uuid = { version = "1.4.1", features = ["v4"] }
