[package]
name = "cherry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
async-graphql = { version = "6.0.1", features = ["uuid", "chrono"] }
async-graphql-axum = "6.0.1"
chrono = { version = "0.4.26", features = ["serde"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
slab = "0.4.8"
serde = { version = "1.0.181", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
eyre = "0.6.8"
serde_json = "1.0.104"
ciborium = "0.2.1"
tower-http = { version = "0.4.3", features = ["cors"] }
